--- a/internal/i18n/locales/fa.json
+++ b/internal/i18n/locales/fa.json
@@ -34,5 +34,14 @@
   },
   "auth_error": {
     "other": "❌ خطا در احراز هویت. لطفا دوباره تلاش کنید."
+  },
+  "join_channel_required": {
+    "other": "📢 جهت استفاده از ربات، لطفا ابتدا در کانال ما عضو شوید:"
+  },
+  "join_channel_button": {
+    "other": "عضویت در کانال"
+  },
+  "not_member_yet": {
+    "other": "⚠️ شما هنوز در کانال عضو نشده‌اید. لطفا جهت ادامه عضو شوید."
   }
 }
