--- a/internal/i18n/locales/zh.json
+++ b/internal/i18n/locales/zh.json
@@ -34,5 +34,14 @@
     },
     "auth_error": {
         "other": "❌ 认证错误。请重试。"
+    },
+    "join_channel_required": {
+        "other": "📢 要使用此机器人，请先加入我们的频道："
+    },
+    "join_channel_button": {
+        "other": "加入频道"
+    },
+    "not_member_yet": {
+        "other": "⚠️ 您尚未加入频道。请加入以继续使用机器人。"
     }
 }
