--- a/internal/i18n/locales/ru.json
+++ b/internal/i18n/locales/ru.json
@@ -34,5 +34,14 @@
     },
     "auth_error": {
         "other": "❌ Ошибка аутентификации. Попробуйте ещё раз."
+    },
+    "join_channel_required": {
+        "other": "📢 Для использования бота, пожалуйста, сначала подпишитесь на наш канал:"
+    },
+    "join_channel_button": {
+        "other": "Подписаться на канал"
+    },
+    "not_member_yet": {
+        "other": "⚠️ Вы ещё не подписаны на канал. Пожалуйста, подпишитесь, чтобы продолжить."
     }
 }
