probably never going to use this commit but who knows?

--- a/internal/i18n/locales/fa.json
+++ b/internal/i18n/locales/fa.json
@@ -43,5 +43,143 @@
   },
   "not_member_yet": {
     "other": "⚠️ شما هنوز در کانال عضو نشده‌اید. لطفا جهت ادامه عضو شوید."
+  },
+  "btn_my_services": {
+    "other": "📦 سرویس‌های من"
+  },
+  "btn_buy_service": {
+    "other": "🛒 خرید سرویس"
+  },
+  "btn_balance": {
+    "other": "💰 موجودی"
+  },
+  "btn_invitation": {
+    "other": "👥 دعوت دوستان"
+  },
+  "btn_prices": {
+    "other": "💎 تعرفه‌ها"
+  },
+  "btn_support": {
+    "other": "🎧 پشتیبانی"
+  },
+  "btn_settings": {
+    "other": "⚙️ تنظیمات"
+  },
+  "btn_back": {
+    "other": "◀️ بازگشت"
+  },
+  "btn_change_language": {
+    "other": "🌐 تغییر زبان"
+  },
+  "your_services": {
+    "other": "📦 *سرویس‌های شما*"
+  },
+  "no_services": {
+    "other": "📭 شما هیچ سرویس فعالی ندارید.\n\nبرای شروع روی 'خرید سرویس' کلیک کنید!"
+  },
+  "error_loading_services": {
+    "other": "❌ خطا در بارگذاری سرویس‌ها. لطفا دوباره تلاش کنید."
+  },
+  "traffic": {
+    "other": "ترافیک"
+  },
+  "expires": {
+    "other": "انقضا"
+  },
+  "available_plans": {
+    "other": "🛒 *پلن‌های موجود*"
+  },
+  "no_plans_available": {
+    "other": "📭 در حال حاضر پلنی موجود نیست."
+  },
+  "error_loading_plans": {
+    "other": "❌ خطا در بارگذاری پلن‌ها. لطفا دوباره تلاش کنید."
+  },
+  "price": {
+    "other": "قیمت"
+  },
+  "duration": {
+    "other": "مدت"
+  },
+  "days": {
+    "other": "روز"
+  },
+  "buy_instructions": {
+    "other": "💡 برای خرید پلن به وب‌سایت ما مراجعه کنید."
+  },
+  "balance_info": {
+    "other": "💰 *موجودی شما*\n\n💵 موجودی: {{.Balance}}"
+  },
+  "error_loading_balance": {
+    "other": "❌ خطا در بارگذاری موجودی. لطفا دوباره تلاش کنید."
+  },
+  "invite_info": {
+    "other": "👥 *برنامه دعوت دوستان*\n\n🔗 کد دعوت شما: `{{.ReferCode}}`\n\n📊 آمار:\n   👤 تعداد دعوت‌ها: {{.Registers}}\n   💰 مجموع درآمد: {{.TotalCommission}}"
+  },
+  "error_loading_invite": {
+    "other": "❌ خطا در بارگذاری اطلاعات دعوت. لطفا دوباره تلاش کنید."
+  },
+  "support_info": {
+    "other": "🎧 *پشتیبانی*\n\nبرای پشتیبانی، لطفا به وب‌سایت مراجعه کرده یا از طریق پنل تیکت ارسال کنید.\n\n📧 ایمیل: support@archnet.io"
+  },
+  "settings_menu": {
+    "other": "⚙️ *تنظیمات*\n\nیکی از گزینه‌های زیر را انتخاب کنید:"
+  },
+  "plan_details": {
+    "other": "🛒 *{{.Name}}*\n\n💵 قیمت: {{.Price}}\n📊 ترافیک: {{.Traffic}} گیگابایت\n📅 مدت: {{.Duration}}\n📱 دستگاه: {{.Devices}}"
+  },
+  "plan_page": {
+    "other": "پلن {{.Current}} از {{.Total}}"
+  },
+  "btn_select_plan": {
+    "other": "✅ انتخاب این پلن"
+  },
+  "btn_prev": {
+    "other": "◀️ قبلی"
+  },
+  "btn_next": {
+    "other": "بعدی ▶️"
+  },
+  "select_quantity": {
+    "other": "📅 *انتخاب مدت*\n\nپلن: {{.PlanName}}\n\nتعداد ماه را انتخاب کنید:"
+  },
+  "btn_month": {
+    "other": "{{.Months}} ماه"
+  },
+  "btn_months": {
+    "other": "{{.Months}} ماه"
+  },
+  "select_payment": {
+    "other": "💳 *انتخاب روش پرداخت*\n\nپلن: {{.PlanName}}\nمدت: {{.Months}} ماه\n\nروش پرداخت را انتخاب کنید:"
+  },
+  "confirm_order": {
+    "other": "📋 *خلاصه سفارش*\n\n📦 پلن: {{.PlanName}}\n📅 مدت: {{.Months}} ماه\n💳 پرداخت: {{.PaymentName}}\n\n💰 جمع کل: {{.Total}}"
+  },
+  "btn_confirm": {
+    "other": "✅ تایید و پرداخت"
+  },
+  "btn_cancel": {
+    "other": "❌ انصراف"
+  },
+  "order_created": {
+    "other": "✅ *سفارش ایجاد شد!*\n\nشماره سفارش: `{{.OrderNo}}`\n\nبرای تکمیل پرداخت روی دکمه زیر کلیک کنید:"
+  },
+  "btn_pay_now": {
+    "other": "💳 پرداخت"
+  },
+  "error_creating_order": {
+    "other": "❌ خطا در ایجاد سفارش. لطفا دوباره تلاش کنید."
+  },
+  "error_loading_payments": {
+    "other": "❌ خطا در بارگذاری روش‌های پرداخت. لطفا دوباره تلاش کنید."
+  },
+  "order_cancelled": {
+    "other": "❌ سفارش لغو شد."
+  },
+  "order_created_balance": {
+    "other": "✅ *سفارش ایجاد و پرداخت شد!*\n\nشماره سفارش: `{{.OrderNo}}`\n\nمبلغ از موجودی شما کسر شد. اشتراک شما اکنون فعال است!"
+  },
+  "order_pending": {
+    "other": "⏳ *سفارش ایجاد شد*\n\nشماره سفارش: `{{.OrderNo}}`\n\nسفارش شما در انتظار پرداخت است. لطفاً پرداخت را تکمیل کنید."
   }
 }
