--- a/internal/i18n/locales/ru.json
+++ b/internal/i18n/locales/ru.json
@@ -43,5 +43,140 @@
     },
     "not_member_yet": {
         "other": "⚠️ Вы ещё не подписаны на канал. Пожалуйста, подпишитесь, чтобы продолжить."
+    },
+    "btn_my_services": {
+        "other": "📦 Мои услуги"
+    },
+    "btn_buy_service": {
+        "other": "🛒 Купить услугу"
+    },
+    "btn_balance": {
+        "other": "💰 Баланс"
+    },
+    "btn_invitation": {
+        "other": "👥 Приглашения"
+    },
+    "btn_prices": {
+        "other": "💎 Цены"
+    },
+    "btn_support": {
+        "other": "🎧 Поддержка"
+    },
+    "btn_settings": {
+        "other": "⚙️ Настройки"
+    },
+    "btn_back": {
+        "other": "◀️ Назад"
+    },
+    "btn_change_language": {
+        "other": "🌐 Сменить язык"
+    },
+    "your_services": {
+        "other": "📦 *Ваши услуги*"
+    },
+    "no_services": {
+        "other": "📭 У вас нет активных услуг.\n\nНажмите 'Купить услугу' чтобы начать!"
+    },
+    "error_loading_services": {
+        "other": "❌ Ошибка загрузки услуг. Попробуйте ещё раз."
+    },
+    "traffic": {
+        "other": "Трафик"
+    },
+    "expires": {
+        "other": "Истекает"
+    },
+    "available_plans": {
+        "other": "🛒 *Доступные планы*"
+    },
+    "no_plans_available": {
+        "other": "📭 В данный момент планы недоступны."
+    },
+    "error_loading_plans": {
+        "other": "❌ Ошибка загрузки планов. Попробуйте ещё раз."
+    },
+    "price": {
+        "other": "Цена"
+    },
+    "duration": {
+        "other": "Длительность"
+    },
+    "days": {
+        "other": "дней"
+    },
+    "buy_instructions": {
+        "other": "💡 Посетите наш сайт для покупки плана."
+    },
+    "balance_info": {
+        "other": "💰 *Ваш баланс*\n\n💵 Баланс: {{.Balance}}"
+    },
+    "error_loading_balance": {
+        "other": "❌ Ошибка загрузки баланса. Попробуйте ещё раз."
+    },
+    "invite_info": {
+        "other": "👥 *Программа приглашений*\n\n🔗 Ваш реферальный код: `{{.ReferCode}}`\n\n📊 Статистика:\n   👤 Всего приглашений: {{.Registers}}\n   💰 Всего заработано: {{.TotalCommission}}"
+    },
+    "error_loading_invite": {
+        "other": "❌ Ошибка загрузки информации о приглашениях. Попробуйте ещё раз."
+    },
+    "support_info": {
+        "other": "🎧 *Поддержка*\n\nДля поддержки посетите наш сайт или создайте тикет через панель.\n\n📧 Email: support@archnet.io"
+    },
+    "settings_menu": {
+        "other": "⚙️ *Настройки*\n\nВыберите опцию ниже:"
+    },
+    "plan_details": {
+        "other": "🛒 *{{.Name}}*\n\n💵 Цена: {{.Price}}\n📊 Трафик: {{.Traffic}} ГБ\n📅 Срок: {{.Duration}}\n📱 Устройства: {{.Devices}}"
+    },
+    "plan_page": {
+        "other": "План {{.Current}} из {{.Total}}"
+    },
+    "btn_select_plan": {
+        "other": "✅ Выбрать этот план"
+    },
+    "btn_prev": {
+        "other": "◀️ Назад"
+    },
+    "btn_next": {
+        "other": "Далее ▶️"
+    },
+    "select_quantity": {
+        "other": "📅 *Выберите срок*\n\nПлан: {{.PlanName}}\n\nВыберите количество месяцев:"
+    },
+    "btn_month": {
+        "other": "{{.Months}} месяц"
+    },
+    "btn_months": {
+        "other": "{{.Months}} мес."
+    },
+    "select_payment": {
+        "other": "💳 *Выберите способ оплаты*\n\nПлан: {{.PlanName}}\nСрок: {{.Months}} мес.\n\nВыберите способ оплаты:"
+    },
+    "confirm_order": {
+        "other": "📋 *Сводка заказа*\n\n📦 План: {{.PlanName}}\n📅 Срок: {{.Months}} мес.\n💳 Оплата: {{.PaymentName}}\n\n💰 Итого: {{.Total}}"
+    },
+    "btn_confirm": {
+        "other": "✅ Подтвердить и оплатить"
+    },
+    "btn_cancel": {
+        "other": "❌ Отмена"
+    },
+    "order_created": {
+        "other": "✅ *Заказ создан!*\n\nНомер заказа: `{{.OrderNo}}`\n\nНажмите кнопку ниже для оплаты:"
+    },
+    "btn_pay_now": {
+        "other": "💳 Оплатить"
+    },
+    "error_creating_order": {
+        "other": "❌ Ошибка создания заказа. Попробуйте ещё раз."
+    },
+    "error_loading_payments": {
+        "other": "❌ Ошибка загрузки способов оплаты. Попробуйте ещё раз."
+    },
+    "order_cancelled": {
+        "other": "❌ Заказ отменён."
+    },
+    "order_created_balance": {
+        "other": "✅ *Заказ создан и оплачен!*\n\nНомер заказа: `{{.OrderNo}}`\n\nОплата списана с вашего баланса. Ваша подписка теперь активна!"
     }
 }
