--- a/internal/i18n/locales/ru.json
+++ b/internal/i18n/locales/ru.json
@@ -28,5 +28,35 @@
     },
     "access_denied": {
         "other": "⛔ Доступ запрещён. Вы не администратор."
+    },
+    "server_offline": {
+        "other": "🔴 **Внимание: Сервер офлайн**\n\n🖥️ **Имя сервера**: {{.ServerName}}\n🌍 **Страна**: {{.Country}}\n🏙️ **Город**: {{.City}}\n⏰ **Последний отчёт**: {{.LastReportedAt}}\n🕒 **Обнаружено**: {{.DetectedAt}}\n\n⚠️ Пожалуйста, проверьте статус сервера."
+    },
+    "server_online": {
+        "other": "🟢 **Сервер онлайн**\n\n🖥️ **Имя сервера**: {{.ServerName}}\n🌍 **Страна**: {{.Country}}\n🏙️ **Город**: {{.City}}\n⏰ **Онлайн с**: {{.OnlineAt}}\n\n✅ Сервер успешно подключён к сети."
+    },
+    "purchase_success": {
+        "other": "🎉 **Покупка успешна!**\n\n**Номер заказа**: {{.OrderNo}}\n**Тариф**: {{.SubscribeName}}\n**Сумма**: **{{.OrderAmount}}**\n**Срок действия до**: {{.ExpireTime}}\n\nСпасибо за поддержку! 💖"
+    },
+    "renewal_success": {
+        "other": "🎉 **Подписка продлена!**\n\n**Номер заказа**: {{.OrderNo}}\n**Тариф**: {{.SubscribeName}}\n**Сумма**: **{{.OrderAmount}}**\n**Срок действия до**: {{.ExpireTime}}\n\nСпасибо за поддержку! 💖"
+    },
+    "recharge_success": {
+        "other": "💳 **Баланс пополнен!**\n\n💰 **Сумма**: {{.OrderAmount}}\n🏦 **Способ оплаты**: {{.PaymentMethod}}\n⏰ **Время**: {{.Time}}\n📊 **Текущий баланс**: **{{.Balance}}**\n\nСпасибо за поддержку! 🎉"
+    },
+    "admin_order_notify": {
+        "other": "📦 **Уведомление о заказе**\n\n🆔 **Номер заказа**: {{.OrderNo}}\n👤 **Пользователь**: {{.UserEmail}}\n💰 **Сумма**: **{{.OrderAmount}}**\n📦 **Тариф**: {{.SubscribeName}}\n💳 **Оплата**: {{.PaymentMethod}}"
+    },
+    "traffic_title": {
+        "other": "📊 Использование трафика"
+    },
+    "traffic_error": {
+        "other": "❌ Ошибка получения данных. Попробуйте снова."
+    },
+    "no_subscriptions": {
+        "other": "📭 Активные подписки не найдены."
+    },
+    "session_expired": {
+        "other": "⚠️ Сессия истекла. Пожалуйста, используйте /start для входа."
     }
 }
