--- a/internal/i18n/locales/zh.json
+++ b/internal/i18n/locales/zh.json
@@ -28,5 +28,35 @@
     },
     "access_denied": {
         "other": "⛔ 访问被拒绝。您不是管理员。"
+    },
+    "server_offline": {
+        "other": "🔴 **警报：服务器离线**\n\n🖥️ **服务器名称**: {{.ServerName}}\n🌍 **国家**: {{.Country}}\n🏙️ **城市**: {{.City}}\n⏰ **最后报告**: {{.LastReportedAt}}\n🕒 **检测时间**: {{.DetectedAt}}\n\n⚠️ 请检查服务器状态。"
+    },
+    "server_online": {
+        "other": "🟢 **服务器上线**\n\n🖥️ **服务器名称**: {{.ServerName}}\n🌍 **国家**: {{.Country}}\n🏙️ **城市**: {{.City}}\n⏰ **上线时间**: {{.OnlineAt}}\n\n✅ 服务器已成功连接到网络。"
+    },
+    "purchase_success": {
+        "other": "🎉 **购买成功！**\n\n**订单号**: {{.OrderNo}}\n**套餐名称**: {{.SubscribeName}}\n**金额**: **{{.OrderAmount}}**\n**到期时间**: {{.ExpireTime}}\n\n感谢您的支持！💖"
+    },
+    "renewal_success": {
+        "other": "🎉 **续费成功！**\n\n**订单号**: {{.OrderNo}}\n**套餐名称**: {{.SubscribeName}}\n**金额**: **{{.OrderAmount}}**\n**到期时间**: {{.ExpireTime}}\n\n感谢您的支持！💖"
+    },
+    "recharge_success": {
+        "other": "💳 **充值完成！**\n\n💰 **金额**: {{.OrderAmount}}\n🏦 **支付方式**: {{.PaymentMethod}}\n⏰ **时间**: {{.Time}}\n📊 **当前余额**: **{{.Balance}}**\n\n感谢您的支持！🎉"
+    },
+    "admin_order_notify": {
+        "other": "📦 **订单通知**\n\n🆔 **订单号**: {{.OrderNo}}\n👤 **用户**: {{.UserEmail}}\n💰 **金额**: **{{.OrderAmount}}**\n📦 **套餐**: {{.SubscribeName}}\n💳 **支付方式**: {{.PaymentMethod}}"
+    },
+    "traffic_title": {
+        "other": "📊 您的流量使用情况"
+    },
+    "traffic_error": {
+        "other": "❌ 获取流量数据失败，请重试。"
+    },
+    "no_subscriptions": {
+        "other": "📭 未找到活跃订阅。"
+    },
+    "session_expired": {
+        "other": "⚠️ 会话已过期。请使用 /start 重新登录。"
     }
 }
