--- a/internal/i18n/locales/fa.json
+++ b/internal/i18n/locales/fa.json
@@ -28,5 +28,35 @@
   },
   "access_denied": {
     "other": "⛔ دسترسی مجاز نیست. شما ادمین نیستید."
+  },
+  "server_offline": {
+    "other": "🔴 **هشدار: سرور آفلاین شد**\n\n🖥️ **نام سرور**: {{.ServerName}}\n🌍 **کشور**: {{.Country}}\n🏙️ **شهر**: {{.City}}\n⏰ **آخرین گزارش**: {{.LastReportedAt}}\n🕒 **زمان شناسایی**: {{.DetectedAt}}\n\n⚠️ لطفاً وضعیت سرور را بررسی کنید."
+  },
+  "server_online": {
+    "other": "🟢 **سرور آنلاین شد**\n\n🖥️ **نام سرور**: {{.ServerName}}\n🌍 **کشور**: {{.Country}}\n🏙️ **شهر**: {{.City}}\n⏰ **زمان آنلاین شدن**: {{.OnlineAt}}\n\n✅ سرور با موفقیت به شبکه متصل شد."
+  },
+  "purchase_success": {
+    "other": "🎉 **خرید شما موفقیت‌آمیز بود!**\n\n**شماره سفارش**: {{.OrderNo}}\n**نام پلن**: {{.SubscribeName}}\n**مبلغ**: **{{.OrderAmount}}**\n**تاریخ انقضا**: {{.ExpireTime}}\n\nممنون از حمایت شما! 💖"
+  },
+  "renewal_success": {
+    "other": "🎉 **اشتراک شما با موفقیت تمدید شد!**\n\n**شماره سفارش**: {{.OrderNo}}\n**نام پلن**: {{.SubscribeName}}\n**مبلغ**: **{{.OrderAmount}}**\n**تاریخ انقضا**: {{.ExpireTime}}\n\nممنون از حمایت شما! 💖"
+  },
+  "recharge_success": {
+    "other": "💳 **شارژ حساب شما با موفقیت انجام شد!**\n\n💰 **مبلغ**: {{.OrderAmount}}\n🏦 **روش پرداخت**: {{.PaymentMethod}}\n⏰ **زمان**: {{.Time}}\n📊 **موجودی فعلی**: **{{.Balance}}**\n\nممنون از حمایت شما! 🎉"
+  },
+  "admin_order_notify": {
+    "other": "📦 **اعلان سفارش جدید**\n\n🆔 **شماره سفارش**: {{.OrderNo}}\n👤 **کاربر**: {{.UserEmail}}\n💰 **مبلغ**: **{{.OrderAmount}}**\n📦 **پلن**: {{.SubscribeName}}\n💳 **پرداخت**: {{.PaymentMethod}}"
+  },
+  "traffic_title": {
+    "other": "📊 مصرف ترافیک شما"
+  },
+  "traffic_error": {
+    "other": "❌ خطا در دریافت اطلاعات ترافیک. لطفا دوباره تلاش کنید."
+  },
+  "no_subscriptions": {
+    "other": "📭 اشتراک فعالی یافت نشد."
+  },
+  "session_expired": {
+    "other": "⚠️ نشست شما منقضی شده است. لطفا دوباره از دستور /start استفاده کنید."
   }
 }
