--- a/internal/i18n/locales/fa.json
+++ b/internal/i18n/locales/fa.json
@@ -58,5 +58,8 @@
   },
   "session_expired": {
     "other": "⚠️ نشست شما منقضی شده است. لطفا دوباره از دستور /start استفاده کنید."
+  },
+  "admin_broadcast_report": {
+    "other": "📢 **ارسال گروهی انجام شد**\n\n📝 **عنوان**: {{.Title}}\n✅ **ارسال موفق**: **{{.Success}}**\n❌ **ارسال ناموفق**: **{{.Failed}}**\n👥 **کل**: {{.Total}}"
   }
 }
