--- a/internal/i18n/locales/ru.json
+++ b/internal/i18n/locales/ru.json
@@ -58,5 +58,8 @@
     },
     "session_expired": {
         "other": "⚠️ Сессия истекла. Пожалуйста, используйте /start для входа."
+    },
+    "admin_broadcast_report": {
+        "other": "📢 **Рассылка завершена**\n\n📝 **Заголовок**: {{.Title}}\n✅ **Отправлено**: **{{.Success}}**\n❌ **Ошибок**: **{{.Failed}}**\n👥 **Всего**: {{.Total}}"
     }
 }
