--- a/internal/i18n/locales/zh.json
+++ b/internal/i18n/locales/zh.json
@@ -58,5 +58,8 @@
     },
     "session_expired": {
         "other": "⚠️ 会话已过期。请使用 /start 重新登录。"
+    },
+    "admin_broadcast_report": {
+        "other": "📢 **群发完成**\n\n📝 **标题**: {{.Title}}\n✅ **成功**: **{{.Success}}**\n❌ **失败**: **{{.Failed}}**\n👥 **总计**: {{.Total}}"
     }
 }
